--- a/public/styles/shared-folder.css
+++ b/public/styles/shared-folder.css
@@ -60,6 +60,13 @@ main {
   justify-items: center;
 }
 
+.file > a {
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @media (max-width: 500px) {
   .hero > p {
     font-size: 1.6rem;
